Exercise3/compiling_error.txt
C:\Users\pfefferlen\github\Session4\Exercise3\serial_pi.cpp: In function 'int main()':
C:\Users\pfefferlen\github\Session4\Exercise3\serial_pi.cpp:26:37: error: too many arguments to function 'int rand()'
             x = (double)rand(&myseed)/RAND_MAX;
                                     ^
In file included from c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\cstdlib:75,
                 from c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\stdlib.h:36,
                 from C:\Users\pfefferlen\github\Session4\Exercise3\serial_pi.cpp:2:
c:\mingw\include\stdlib.h:481:38: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  int rand (void);
                                      ^~~~
C:\Users\pfefferlen\github\Session4\Exercise3\serial_pi.cpp:27:37: error: too many arguments to function 'int rand()'
             y = (double)rand(&myseed)/RAND_MAX;
                                     ^
In file included from c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\cstdlib:75,
                 from c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\stdlib.h:36,
                 from C:\Users\pfefferlen\github\Session4\Exercise3\serial_pi.cpp:2:
c:\mingw\include\stdlib.h:481:38: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  int rand (void);
                                      ^~~~
